new version of my portfolio

--- a/fi/index.html
+++ b/fi/index.html
@@ -34,8 +34,8 @@
                         <h1 class="text-primary">Jere Tolonen</h1>
                         <p class="text-secondary">Ohjelmistokehittäjä</p>
                     </div>
-                    <div class="mob-hidden">
-                        <h3>H3</h3>
+                    <div>
+                        <h3 class="mob-hidden">H3</h3>
                     </div>
                 </div>
             </div>
@@ -54,14 +54,16 @@
                     </div>
                     <div class="m-cont fl-col stat-align">
                         <div class="h-50p">
-                            <div><h2>10+</h2></div>
+                            <div><h2 class="stat-num brdrad-15 text-coffee-light">10+</h2></div>
+                            <br>
                             <div><h3>Valmistunutta Projektia</h3></div>
                             <br>
                             <div class="line coffee-light"></div>
                         </div>
                         <br>
                         <div class="h-50p">
-                            <div><h2>3+</h2></div>
+                            <div><h2 class="stat-num brdrad-15 text-coffee-light">3+</h2></div>
+                            <br>
                             <div><h3>Vuotta Kokemusta</h3></div>
                             <br>
                             <div class="line coffee-light"></div>
@@ -72,7 +74,52 @@
             </div>
         </div>
         <div id="projects">
-            projektini
+            <div class="mrg-i-5vw max-1200px fl-cent fl-col">
+                <br>
+                <div class="line coffee-light"></div>
+                <h2 class="text-secondary">
+                    Projektit
+                </h2>
+                <div class="mob-col col-gap-15" id="project-container">
+                    <!--Projects here-->
+                    <div class="project-cont">
+                        <div class="project-img-cont">
+                            <img src="../content/rel/media/images/placeholder.png" alt="" class="project-img">
+                            <div class="mob-project-text">
+                                <h1 class="text-primary">Projekti 1</h1>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                        <div class="mrg-i-25 mrg-b-25 project-text">
+                            <h1 class="text-primary">Projekti 1</h1>
+                            <div class="fl-row">
+                                <div>
+                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="project-cont">
+                        <div class="mrg-i-25 mrg-b-25 project-text">
+                            <h1 class="text-primary">Projekti 2</h1>
+                            <div class="fl-row">
+                                <div>
+                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-img-cont">
+                            <img src="../content/rel/media/images/placeholder.png" alt="" class="project-img">
+                            <div class="mob-project-text">
+                                <h1 class="text-primary">Projekti 2</h1>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+            </div>
         </div>
         <div id="contact">
             Ota yhteyttä
