--- a/fi/index.html
+++ b/fi/index.html
@@ -35,7 +35,7 @@
                         <p class="text-secondary">Ohjelmistokehittäjä</p>
                     </div>
                     <div>
-                        <h3 class="mob-hidden">H3</h3>
+                        <h3 class="mob-hidden">IMG</h3>
                     </div>
                 </div>
             </div>
@@ -47,12 +47,12 @@
                     Tietoja
                 </h2>
                 <div class="fl-row gap-25 mob-col">
-                    <div class="m-cont">
+                    <div class="m-cont brdrad-15">
                         <h1 class="text-primary">Olen 17 vuotias ohjelmistokehittäjä-opiskelija Kuopiosta</h1>
                         <p class="info-paragraph">Opiskelen Savon ammattiopistossa ohjelmistokehittäjäksi, jossa valmistun vuonna 2027. Ohjelmoin pääsääntöisesti C#:lla, Lua:lla sekä Php:lla.</p>
                         <p class="info-paragraph">Vapaa-ajallani olen aktiivinen valokuvaamaan sekä suunnittelen omiin sovelluksiini ja peleihin käyttöliittymiä. Olen myös hyvä 3D-mallinnuksessa Blender-sovelluksessa, johon on kertynyt muutama tuhat tuntia</p>
                     </div>
-                    <div class="m-cont fl-col stat-align">
+                    <div class="m-cont fl-col stat-align brdrad-15">
                         <div class="h-50p">
                             <div><h2 class="stat-num brdrad-15 text-coffee-light">10+</h2></div>
                             <br>
@@ -82,7 +82,7 @@
                 </h2>
                 <div class="mob-col col-gap-15" id="project-container">
                     <!--Projects here-->
-                    <div class="project-cont">
+                    <div class="project-cont brdrad-15">
                         <div class="project-img-cont">
                             <img src="../content/rel/media/images/placeholder.png" alt="" class="project-img">
                             <div class="mob-project-text">
@@ -100,7 +100,7 @@
                         </div>
                     </div>
 
-                    <div class="project-cont">
+                    <div class="project-cont brdrad-15">
                         <div class="mrg-i-25 mrg-b-25 project-text">
                             <h1 class="text-primary">Projekti 2</h1>
                             <div class="fl-row">
@@ -121,24 +121,48 @@
                 <br>
             </div>
         </div>
-        <div id="contact">
-            Ota yhteyttä
-        </div>
-        <div id="more">
-            Lisää minusta
+        <div class="con-row max-1200px mrg-i-5vw gap-25">
+            <div id="contact">
+                <div class="fl-cent fl-col">
+                    <div class="line coffee-light"></div>
+                    <h2 class="text-secondary">
+                        Ota Yhteyttä
+                    </h2>
+                    <div class="l-cont brdrad-15">
+
+                    </div>
+                </div>
+            </div>
+            <div id="more">
+                <div class="fl-cent fl-col">
+                    <div class="line coffee-light"></div>
+                    <h2 class="text-secondary">
+                        Lisää minusta
+                    </h2>
+                    <div class="fl-row gap-25 h-scroll">
+                        <div class="link-cont brdrad-15">
+                            <a href="https://github.com/VisualPlate">GitHub</a>
+                        </div>
+                        <div class="link-cont brdrad-15">
+                            <a href="https://www.linkedin.com/in/jere-tolonen/">LinkedIn</a>
+                        </div>
+                        <div class="link-cont brdrad-15">
+                            <a href="https://www.instagram.com/jere.tolonen/">Instagram</a>
+                        </div>
+                        <div class="link-cont brdrad-15">
+                            <a href="https://500px.com/p/visualplate">500px</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
-    <div class="mrg-i-5vw max-1200px fl-cent fl-col">
-        <h1 class="text-primary">Container Header</h1>
-        <div class="l-cont">
-            full size container
+    <footer>
+        <div class="footer-cont">
+            <div class="max-1200px">
+                <h1>Footer</h1>
+            </div>
         </div>
-        <div class="m-cont">
-            half size container
-        </div>
-        <div class="s-cont">
-            one fourth size container
-        </div>
-    </div>
+    </footer>
 </body>
 </html>
