--- a/fi/index.html
+++ b/fi/index.html
@@ -27,7 +27,7 @@
         </div>
     </nav>
     <main>
-        <div class="hero-bg">
+        <div class="hero-bg" id="landing">
             <div class="max-1200px h-100p mrg-i-5vw">
                 <div class="hero-align">
                     <div class="hero-texts">
@@ -35,7 +35,7 @@
                         <p class="text-secondary">Ohjelmistokehittäjä</p>
                     </div>
                     <div>
-                        <img src="../content/rel/media/images/placeholder.png" alt="portrait" class="mob-hidden">
+                        <img src="../content/rel/media/images/portrait512.jpg" alt="portrait" class="mob-hidden">
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                             <h1 class="text-primary">Lisää Projekteja</h1>
                             <div class="fl-row">
                                 <div>
-                                    <p>Lue lisää projekteistani painamalla</p>
+                                    <p>Paina ja Lue lisää projekteistani</p>
                                 </div>
                             </div>
                         </div>
