--- a/fi/projects/index.html
+++ b/fi/projects/index.html
@@ -80,6 +80,40 @@
                             </div>
                         </div>
                     </div>
+                    <div class="project-cont brdrad-5">
+                        <div class="project-img-cont">
+                            <img src="../../content/rel/media/images/placeholder.png" alt="" class="project-img">
+                            <div class="mob-project-text">
+                                <h1 class="text-primary">Projekti 1</h1>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                        <div class="mrg-i-25 mrg-b-25 project-text">
+                            <h1 class="text-primary">Projekti 1</h1>
+                            <div class="fl-row">
+                                <div>
+                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-cont brdrad-5">
+                        <div class="mrg-i-25 mrg-b-25 project-text">
+                            <h1 class="text-primary">Projekti 2</h1>
+                            <div class="fl-row">
+                                <div>
+                                    <p>Projekti 2</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-img-cont">
+                            <img src="../../content/rel/media/images/placeholder.png" alt="" class="project-img">
+                            <div class="mob-project-text">
+                                <h1 class="text-primary">Projekti 2</h1>
+                                <p>Projekti 2</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <br>
             </div>
