--- a/fi/index.html
+++ b/fi/index.html
@@ -86,22 +86,22 @@
                         <div class="project-img-cont">
                             <img src="../content/rel/media/images/placeholder.png" alt="" class="project-img">
                             <div class="mob-project-text">
-                                <h1 class="text-primary">Projekti 1</h1>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                                <h1 class="text-primary">WebPortfolio</h1>
+                                <p>Nyt juuri katsomasi sivusto</p>
                             </div>
                         </div>
                         <div class="mrg-i-25 mrg-b-25 project-text">
-                            <h1 class="text-primary">Projekti 1</h1>
+                            <h1 class="text-primary">WebPortfolio</h1>
                             <div class="fl-row">
                                 <div>
-                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                                    <p>Nyt juuri katsomasi sivusto</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="project-cont brdrad-5" onclick="location.href='projects/'"; style="cursor:pointer;">
                         <div class="mrg-i-25 mrg-b-25 project-text">
-                            <h1 class="text-primary">Lisää Projekteja</h1>
+                            <h1 class="text-primary">Avaa Projekti Välilehti</h1>
                             <div class="fl-row">
                                 <div>
                                     <p>Paina ja Lue lisää projekteistani</p>
@@ -109,9 +109,9 @@
                             </div>
                         </div>
                         <div class="project-img-cont">
-                            <img src="../content/rel/media/images/placeholder.png" alt="" class="project-img">
+                            <img src="../content/rel/media/images/itemlist.png" alt="" class="project-img">
                             <div class="mob-project-text">
-                                <h1 class="text-primary">Lisää Projekteja</h1>
+                                <h1 class="text-primary">Avaa Projekti Välilehti</h1>
                                 <p>Lue lisää projekteistani painamalla</p>
                             </div>
                         </div>
@@ -166,7 +166,8 @@
     <footer>
         <div class="footer-cont">
             <div class="max-1200px">
-                <h1>Footer</h1>
+                <h1>Pääsi loppuun</h1>
+                <a href="#landing">Takaisin alkuun</a>
             </div>
         </div>
     </footer>
