--- a/fi/projects/index.html
+++ b/fi/projects/index.html
@@ -27,7 +27,7 @@
         </div>
     </nav>
     <main>
-        <div class="hero-bg">
+        <div class="hero-bg" id="top">
             <div class="max-1200px h-100p mrg-i-5vw">
                 <div class="hero-align">
                     <div class="hero-texts">
@@ -50,33 +50,35 @@
                         <div class="project-img-cont">
                             <img src="../../content/rel/media/images/placeholder.png" alt="" class="project-img">
                             <div class="mob-project-text">
-                                <h1 class="text-primary">Projekti 1</h1>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                                <h1 class="text-primary">VPCSS Framework</h1>
+                                <p>Css:ään perustuva frameworkki omiin webbi projekteihini. Vierailemasi sivusto itse käyttää sitä</p>
                             </div>
                         </div>
                         <div class="mrg-i-25 mrg-b-25 project-text">
-                            <h1 class="text-primary">Projekti 1</h1>
+                            <h1 class="text-primary">VPCSS Framework</h1>
                             <div class="fl-row">
                                 <div>
-                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                                    <p>Css:ään perustuva frameworkki omiin webbi projekteihini</p>
+                                    <a href="https://github.com/VisualPlate/vpcssFramework">Linkki Projektiin</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="project-cont brdrad-5">
                         <div class="mrg-i-25 mrg-b-25 project-text">
-                            <h1 class="text-primary">Projekti 2</h1>
+                            <h1 class="text-primary">Bulk-Unzipper</h1>
                             <div class="fl-row">
                                 <div>
-                                    <p>Projekti 2</p>
+                                    <p>Zip-pakettien sarja purku ohjelma, joita windowsissa ei ole oletuksena</p>
+                                    <a href="https://github.com/VisualPlate/Bulk-Unzipper">Linkki Projektiin</a>
                                 </div>
                             </div>
                         </div>
                         <div class="project-img-cont">
                             <img src="../../content/rel/media/images/placeholder.png" alt="" class="project-img">
                             <div class="mob-project-text">
-                                <h1 class="text-primary">Projekti 2</h1>
-                                <p>Projekti 2</p>
+                                <h1 class="text-primary">Bulk-unzipper</h1>
+                                <p>Zip-pakettien sarja purku ohjelma</p>
                             </div>
                         </div>
                     </div>
@@ -84,33 +86,33 @@
                         <div class="project-img-cont">
                             <img src="../../content/rel/media/images/placeholder.png" alt="" class="project-img">
                             <div class="mob-project-text">
-                                <h1 class="text-primary">Projekti 1</h1>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                                <h1 class="text-primary">WebApps</h1>
+                                <p>Sivusto webbi-pohjaisille sovelluksille. Tällä hektellä sisältää svg-muuntajia ja laskimia. Ei Julkinen</p>
                             </div>
                         </div>
                         <div class="mrg-i-25 mrg-b-25 project-text">
-                            <h1 class="text-primary">Projekti 1</h1>
+                            <h1 class="text-primary">WebApps</h1>
                             <div class="fl-row">
                                 <div>
-                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                                    <p>Sivusto webbi-pohjaisille sovelluksille</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="project-cont brdrad-5">
                         <div class="mrg-i-25 mrg-b-25 project-text">
-                            <h1 class="text-primary">Projekti 2</h1>
+                            <h1 class="text-primary">Muut Julkiset Projektit</h1>
                             <div class="fl-row">
                                 <div>
-                                    <p>Projekti 2</p>
+                                    <a href="https://github.com/VisualPlate?tab=repositories" target="_blank">Avaa Github</a>
                                 </div>
                             </div>
                         </div>
                         <div class="project-img-cont">
                             <img src="../../content/rel/media/images/placeholder.png" alt="" class="project-img">
                             <div class="mob-project-text">
-                                <h1 class="text-primary">Projekti 2</h1>
-                                <p>Projekti 2</p>
+                                <h1 class="text-primary">Muut Julkiset Projektit</h1>
+                                <p>Voit löytää ne GitHubista</p>
                             </div>
                         </div>
                     </div>
@@ -122,7 +124,8 @@
     <footer>
         <div class="footer-cont">
             <div class="max-1200px">
-                <h1>Footer</h1>
+                <h1>Pääsi loppuun</h1>
+                <a href="#top">Takaisin alkuun</a>
             </div>
         </div>
     </footer>
