--- a/fi/contact/index.html
+++ b/fi/contact/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../../content/styles/style.css">
 </head>
 <body>
+    <!--There is no direct link to this page currently as 9.10.2025-->
     <nav class="show-top">
         <div class="pos-top pos-right mrg-i-25 mrg-b-15 nav-ui">
             <a href="../#landing" class="nav-link mob-hidden"><img src="../../content/rel/media/icons/house32.png" alt="Home" class="inverted-icon"></a>
@@ -71,12 +72,5 @@
             </div>
         </div>
     </main>
-    <footer>
-        <div class="footer-cont">
-            <div class="max-1200px">
-                <h1>Footer</h1>
-            </div>
-        </div>
-    </footer>
 </body>
 </html>
