--- a/fi/index.html
+++ b/fi/index.html
@@ -84,7 +84,7 @@
                     <!--Projects here-->
                     <div class="project-cont brdrad-5">
                         <div class="project-img-cont">
-                            <img src="../content/rel/media/images/placeholder.png" alt="" class="project-img">
+                            <img src="../content/rel/media/images/portfolio.jpg" alt="" class="project-img">
                             <div class="mob-project-text">
                                 <h1 class="text-primary">WebPortfolio</h1>
                                 <p>Nyt juuri katsomasi sivusto</p>
@@ -94,7 +94,8 @@
                             <h1 class="text-primary">WebPortfolio</h1>
                             <div class="fl-row">
                                 <div>
-                                    <p>Nyt juuri katsomasi sivusto</p>
+                                    <p>Nyt juuri katsomasi sivusto. lisätietoja alla olevasta linkistä</p>
+                                    <a href="https://github.com/VisualPlate/portfolio" target="_blank">GitHub linkki</a>
                                 </div>
                             </div>
                         </div>
@@ -109,7 +110,7 @@
                             </div>
                         </div>
                         <div class="project-img-cont">
-                            <img src="../content/rel/media/images/itemlist.png" alt="" class="project-img">
+                            <img src="../content/rel/media/images/itemlist_w.png" alt="" class="project-img">
                             <div class="mob-project-text">
                                 <h1 class="text-primary">Avaa Projekti Välilehti</h1>
                                 <p>Lue lisää projekteistani painamalla</p>
