--- a/en/projects/index.html
+++ b/en/projects/index.html
@@ -23,7 +23,7 @@
             <a href="https://github.com/VisualPlate" target="_blank" class="nav-link"><img src="../../content/rel/media/icons/github32.png" alt="GitHub" class="inverted-icon"></a>
         </div>
         <div class="pos-top pos-left mrg-i-25 mrg-b-15">
-            <a href="../../en/" class="nav-link"><img src="../../content/rel/media/icons/earth32.png" alt="Lanquage" class="inverted-icon"></a>
+            <a href="../../fi/" class="nav-link"><img src="../../content/rel/media/icons/earth32.png" alt="Lanquage" class="inverted-icon"></a>
         </div>
     </nav>
     <main>
@@ -31,7 +31,7 @@
             <div class="max-1200px h-100p mrg-i-5vw">
                 <div class="hero-align">
                     <div class="hero-texts">
-                        <h1 class="text-primary hero-header">Projektini</h1>
+                        <h1 class="text-primary hero-header">My Projects</h1>
                         <p class="text-secondary"></p>
                     </div>
                 </div>
@@ -42,7 +42,7 @@
                 <br>
                 <div class="line coffee-light"></div>
                 <h2 class="text-secondary">
-                    Projektit
+                    My Projects
                 </h2>
                 <div class="mob-col col-gap-15" id="project-container">
                     <!--Projects here-->
@@ -51,15 +51,15 @@
                             <img src="../../content/rel/media/images/vpcss.png" alt="" class="project-img">
                             <div class="mob-project-text">
                                 <h1 class="text-primary">VPCSS Framework</h1>
-                                <p>Css:ään perustuva frameworkki omiin webbi projekteihini. Vierailemasi sivusto itse käyttää sitä</p>
+                                <p>CSS based framework that i use on my own projects.</p>
                             </div>
                         </div>
                         <div class="mrg-i-25 mrg-b-25 project-text">
                             <h1 class="text-primary">VPCSS Framework</h1>
                             <div class="fl-row">
                                 <div>
-                                    <p>Css:ään perustuva frameworkki omiin webbi projekteihini</p>
-                                    <a href="https://github.com/VisualPlate/vpcssFramework" target="_blank">Linkki Projektiin</a>
+                                    <p>CSS based framework that i use on my own projects.</p>
+                                    <a href="https://github.com/VisualPlate/vpcssFramework" target="_blank">Link To Project</a>
                                 </div>
                             </div>
                         </div>
@@ -69,8 +69,8 @@
                             <h1 class="text-primary">Bulk-Unzipper</h1>
                             <div class="fl-row">
                                 <div>
-                                    <p>Zip-pakettien sarja purku ohjelma, joita windowsissa ei ole oletuksena</p>
-                                    <a href="https://github.com/VisualPlate/Bulk-Unzipper" target="_blank">Linkki Projektiin</a>
+                                    <p>An app that lets you unzip multiple zip files at a time</p>
+                                    <a href="https://github.com/VisualPlate/Bulk-Unzipper" target="_blank">Link To Project</a>
                                 </div>
                             </div>
                         </div>
@@ -78,24 +78,24 @@
                             <img src="../../content/rel/media/images/bulkunzipper_w.png" alt="" class="project-img">
                             <div class="mob-project-text">
                                 <h1 class="text-primary">Bulk-unzipper</h1>
-                                <p>Zip-pakettien sarja purku ohjelma</p>
+                                <p>Unzip multiple zip files at a time</p>
                             </div>
                         </div>
                     </div>
                     <div class="project-cont brdrad-5">
                         <div class="mrg-i-25 mrg-b-25 project-text">
-                            <h1 class="text-primary">Muut Julkiset Projektit</h1>
+                            <h1 class="text-primary">Other Public Projects</h1>
                             <div class="fl-row">
                                 <div>
-                                    <a href="https://github.com/VisualPlate?tab=repositories" target="_blank">Avaa Github</a>
+                                    <a href="https://github.com/VisualPlate?tab=repositories" target="_blank">Open Github</a>
                                 </div>
                             </div>
                         </div>
                         <div class="project-img-cont">
                             <img src="../../content/rel/media/images/itemlist_w.png" alt="img" class="project-img">
                             <div class="mob-project-text">
-                                <h1 class="text-primary">Muut Julkiset Projektit</h1>
-                                <p>Voit löytää ne GitHubista</p>
+                                <h1 class="text-primary">Other Public Projects</h1>
+                                <p>Find them on my GitHub profile</p>
                             </div>
                         </div>
                     </div>
@@ -107,8 +107,8 @@
     <footer>
         <div class="footer-cont">
             <div class="max-1200px">
-                <h1>Pääsi loppuun</h1>
-                <a href="#top">Takaisin alkuun</a>
+                <h1>The End</h1>
+                <a href="#top">Back To Start</a>
             </div>
         </div>
     </footer>
