--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="show-top">
         <div class="pos-top pos-right mrg-i-25 mrg-b-15 nav-ui">
-            <a href="https://github.com/VisualPlate" target="_blank" class="nav-link"><img src="../content/rel/media/icons/github32.png" alt="GitHub" class="inverted-icon"></a>
+            <a href="https://github.com/VisualPlate" target="_blank" class="nav-link"><img src="content/rel/media/icons/github32.png" alt="GitHub" class="inverted-icon"></a>
         </div>
     </nav>
     <main>
