--- a/fi/projects/index.html
+++ b/fi/projects/index.html
@@ -32,7 +32,7 @@
                 <div class="hero-align">
                     <div class="hero-texts">
                         <h1 class="text-primary hero-header">Projektini</h1>
-                        <p class="text-secondary"></p>
+                        <p class="text-secondary">Parhaimmat Projektini</p>
                     </div>
                 </div>
             </div>
@@ -60,6 +60,24 @@
                                 <div>
                                     <p>Css:ään perustuva frameworkki omiin webbi projekteihini</p>
                                     <a href="https://github.com/VisualPlate/vpcssFramework" target="_blank">Linkki Projektiin</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-cont brdrad-5">
+                        <div class="project-img-cont">
+                            <img src="../../content/rel/media/images/vpicons.png" alt="" class="project-img">
+                            <div class="mob-project-text">
+                                <h1 class="text-primary">VP Icons</h1>
+                                <p>Repo ilmaisiin itse tehtyihin kuvakkeisiin</p>
+                            </div>
+                        </div>
+                        <div class="mrg-i-25 mrg-b-25 project-text">
+                            <h1 class="text-primary">VP Icons</h1>
+                            <div class="fl-row">
+                                <div>
+                                <p>Repo ilmaisiin itse tehtyihin kuvakkeisiin</p>
+                                    <a href="https://github.com/VisualPlate/vpIcons" target="_blank">Linkki Projektiin</a>
                                 </div>
                             </div>
                         </div>
@@ -101,6 +119,28 @@
                     </div>
                 </div>
                 <br>
+                <div id="more">
+                    <div class="fl-cent fl-col">
+                        <div class="line coffee-light"></div>
+                        <h2 class="text-secondary">
+                            Lisää minusta
+                        </h2>
+                        <div class="fl-row gap-25 h-scroll">
+                            <div class="link-cont brdrad-15">
+                                <a href="https://github.com/VisualPlate" target="_blank" class="text-secondary">GitHub</a>
+                            </div>
+                            <div class="link-cont brdrad-15">
+                                <a href="https://www.linkedin.com/in/jere-tolonen/" target="_blank" class="text-secondary">LinkedIn</a>
+                            </div>
+                            <div class="link-cont brdrad-15">
+                                <a href="https://www.instagram.com/jere.tolonen/" target="_blank" class="text-secondary">Instagram</a>
+                            </div>
+                            <div class="link-cont brdrad-15">
+                                <a href="https://500px.com/p/visualplate" target="_blank" class="text-secondary">500px</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
